--- a/code/app/src/main/res/layout/notification_center.xml
+++ b/code/app/src/main/res/layout/notification_center.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/main">
 
     <ScrollView
         android:layout_width="0dp"
@@ -20,33 +21,15 @@
             android:orientation="vertical"
             android:padding="16dp">
 
-            <LinearLayout
-                android:layout_width="378dp"
-                android:layout_height="25dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/backButton"
-                    android:layout_width="34dp"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_arrow_left" />
-
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="279dp"
-                    android:layout_height="wrap_content"
-                    android:text="Notifications Center"
-                    android:textAlignment="center"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <RelativeLayout
-                    android:layout_width="70dp"
-                    android:layout_height="match_parent">
-
-                </RelativeLayout>
-            </LinearLayout>
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Notifications Center"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView5"
