--- a/code/app/src/main/res/layout/entrant_profile.xml
+++ b/code/app/src/main/res/layout/entrant_profile.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
         android:layout_marginBottom="16dp"
-        android:text="Entrant Profile"
+        android:text="Profile"
         android:textColor="@color/black"
         android:textSize="34sp"
         android:textStyle="bold" />
