--- a/code/app/src/main/res/layout/notification_card.xml
+++ b/code/app/src/main/res/layout/notification_card.xml
@@ -9,10 +9,10 @@
     app:cardElevation="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/notification_root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        >
+        android:padding="16dp">
 
         <TextView
             android:id="@+id/notificationTag"
