--- a/code/app/src/main/res/layout/event_creation.xml
+++ b/code/app/src/main/res/layout/event_creation.xml
@@ -300,9 +300,9 @@
                         android:id="@+id/limitEntrantsSwitch"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Limit Number of Entrants"
-                        android:textStyle="bold"
-                        android:textColor="@color/black"/>
+                        android:text="Limit Waitlist size"
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/maxEntrantsEditText"
