--- a/code/app/src/main/res/layout/notification_center.xml
+++ b/code/app/src/main/res/layout/notification_center.xml
@@ -21,6 +21,14 @@
             android:orientation="vertical"
             android:padding="16dp">
 
+            <ImageButton
+                android:id="@+id/notificationCentreBackButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_arrow_left"
+                android:background="?attr/selectableItemBackgroundBorderless"/>
+
+
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
